--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
-*{
-    transition: smooth ease-in-out;
+* {
+  transition: smooth ease-in-out 200ms;
 }
